--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -13300,7 +13300,7 @@ defining a named function (which can't be recursive for obvious
 reasons):
 
 @example
-var double = lambda (int i) int: @{ return i * 2 @};
+var double = lambda (int i) int: @{ return i * 2; @};
 @end example
 
 @node Function Comparison
