--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -12933,7 +12933,7 @@ statement that will be executed if @var{exp} holds false.  The
 @subsection Conditional Expressions
 @cindex conditional expressions
 @cindex ternary conditional operator
-@cindex @code{@?}
+@cindex @code{?}
 @cindex @code{:}
 
 Poke supports a ternary conditional expression that has the form:
