--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2025-08-13  Paul Bolle <pebolle@tiscali.nl>
+
+	* pickles/ustar.pk: Make get_last_mod_time() do what it was intended
+	to do.
+
 2025-06-08  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* etc/pvm-wraps-whitelist: Add `__fprintf_chk'.
