Fix CI Errors in new HServer Port Config
The previous commit to add a custom port for the Hyperlink Server
had 2 issues:

1. It was clearly missing a break statement
2. It put a declaration immediately after a case label which is not
   allowed preior to C23.

Fix both of those cases.

2026-02-09  Darshit Shah  <darnir@gnu.org>

	* poke/poke.c (parse_args_1): Add a missing break statement and
	fix syntax for C11 compilers by not having a statement right
	after a label. Instead, use a sub-block as gnulib's coding style
	recommends

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2026-02-09  Darshit Shah  <darnir@gnu.org>
+
+	* poke/poke.c (parse_args_1): Add a missing break statement and
+	fix syntax for C11 compilers by not having a statement right
+	after a label. Instead, use a sub-block as gnulib's coding style
+	recommends
+
 2026-02-02  Darshit Shah  <darnir@gnu.org>
 
 	* poke/poke.c: Introduce new global to hold the Port that poke's
